@@ -41,10 +41,10 @@ dist-build-rpm: ecasound.spec dist
 	rpm --addsign /usr/src/redhat/RPMS/i386/$(PACKAGE)*$(VERSION)-$(RELEASE).i386.rpm
 
 move-to-seul:
-	mv -v /usr/src/redhat/SOURCES/$(PACKAGE)-$(VERSION).tar.gz /opt/http/ecasound.seul/
+	mv -v /usr/src/redhat/SOURCES/$(PACKAGE)-$(VERSION).tar.gz $(HOME)/webdev/seul.org/ecasound.seul/
 	rm -f $(PACKAGE)-$(VERSION).tar.gz
-	mv -v /usr/src/redhat/RPMS/i386/$(PACKAGE)-$(VERSION)-$(RELEASE).i386.rpm /opt/http/ecasound.seul/
-	mv -v /usr/src/redhat/RPMS/i386/$(PACKAGE)-plugins-$(VERSION)-$(RELEASE).i386.rpm /opt/http/ecasound.seul/
-	mv -v /usr/src/redhat/RPMS/i386/$(PACKAGE)-devel-$(VERSION)-$(RELEASE).i386.rpm /opt/http/ecasound.seul/
-	mv -v /usr/src/redhat/RPMS/i386/pyecasound-$(VERSION)-$(RELEASE).i386.rpm /opt/http/ecasound.seul/
-	mv -v /usr/src/redhat/SRPMS/$(PACKAGE)-$(VERSION)-$(RELEASE).src.rpm /opt/http/ecasound.seul/
+	mv -v /usr/src/redhat/RPMS/i386/$(PACKAGE)-$(VERSION)-$(RELEASE).i386.rpm $(HOME)/webdev/seul.org/ecasound.seul/
+	mv -v /usr/src/redhat/RPMS/i386/$(PACKAGE)-plugins-$(VERSION)-$(RELEASE).i386.rpm $(HOME)/webdev/seul.org/ecasound.seul/
+	mv -v /usr/src/redhat/RPMS/i386/$(PACKAGE)-devel-$(VERSION)-$(RELEASE).i386.rpm $(HOME)/webdev/seul.org/ecasound.seul/
+	mv -v /usr/src/redhat/RPMS/i386/pyecasound-$(VERSION)-$(RELEASE).i386.rpm $(HOME)/webdev/seul.org/ecasound.seul/
+	mv -v /usr/src/redhat/SRPMS/$(PACKAGE)-$(VERSION)-$(RELEASE).src.rpm $(HOME)/webdev/seul.org/ecasound.seul/
