@@ -2,7 +2,7 @@
 *** ecasound - changes and additions to libecasound interface       ***
 -----------------------------------------------------------------------
 
-2000-05-02  Kai Vehmanen <kaiv@wakkanet.fi>
+2001-05-02  Kai Vehmanen <kaiv@wakkanet.fi>
 
 	* ecasound 2.0.0 released
 	
